trying to fix overflow problem - not scrolling on landscape

--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -47,6 +47,8 @@
 @media (min-width: 481px) and (max-width: 767px) {
   .board-container__left-side {
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    z-index: 1;
   }
 }
 
